--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -4,6 +4,12 @@
     participant browser
     participant server
 
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    server-->>browser: Something
+    deactivate server
+
+
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
     server-->>browser: HTML document
@@ -19,12 +25,8 @@
     server-->>browser: the JavaScript file
     deactivate server
 
-    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
-
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
+    server-->>browser: [{ "content": "interesting", "date": "2025-05-26" }, ... ]
     deactivate server
-
-    Note right of browser: The browser executes the callback function that renders the notes
 ```
