--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -6,7 +6,7 @@
 
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate server
-    server-->>browser: Something
+    server-->>browser: HTTP code 302 redirect to /exampleapp/notes
     deactivate server
 
 
