--- a/part0/0.6.md
+++ b/part0/0.6.md
@@ -27,5 +27,5 @@
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
     activate server
     server->>browser: Responds with 201 created
-    deactive server
+    deactivate server
 ```
